@@ -20,6 +20,7 @@
 * MaxiPago: Add verify and scrub [shasum]
 * CyberSource: Assign default with override for billing address and email [shasum]
 * CyberSource: Assign default order_id [duff]
+* TNS: Support asia_pacific endpoint [curiousepic]
 
 == Version 1.59.0 (May 18, 2016)
 * Orbital: Allow AVS parts to be sent sans country [duff]
